arayüz tasarımları genel olarak tamamlandı, ürün bilgileri vb. eklemeler yapıldı.

--- a/anasayfa.html
+++ b/anasayfa.html
@@ -62,9 +62,9 @@
                 <div class="carousel-item active">
                     <img src="assets/home img/1.jpg" class="d-block w-100"
                         alt="Sunset Over the City" />
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                    <div class="carousel-caption d-none d-md-block" style="background-color: black;">
+                        <h5> <b>Afiş 1</b></h5>
+                        <p>AntikApp - Antikadan daha fazlası.</p>
                     </div>
                 </div>
 
@@ -72,9 +72,9 @@
                 <div class="carousel-item">
                     <img src="assets/home img/2.jpg" class="d-block w-100"
                         alt="Canyon at Nigh" />
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <div class="carousel-caption d-none d-md-block" style="background-color: black;">
+                        <h5><b>Afiş 1</b></h5>
+                        <p>AntikApp - Kolleksiyondan daha fazlası</p>
                     </div>
                 </div>
 
@@ -82,9 +82,9 @@
                 <div class="carousel-item">
                     <img src="assets/home img/3.jpg" class="d-block w-100"
                         alt="Cliff Above a Stormy Sea" />
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+                    <div class="carousel-caption d-none d-md-block" style="background-color: black;">
+                        <h5><b>Afiş 1</b></h5>
+                        <p>AntikApp - Yeni eski herşey</p>
                     </div>
                 </div>
             </div>
@@ -217,211 +217,242 @@
     <!-- Ürün Kartları kısmı -->
 
     <div class="row mx-3 my-2 mt-0" style="text-align: center; background-color: #dbdee2;">
+    <h2 style="text-align: center;  margin-bottom: 5rem; margin-top: 5rem;">Ürünler</h2>
         <div class="col-sm-12 col-md-4 col-lg-3">
             <div class="card h-75">
-                <img src="assets/online müzayede/daktilo.jpg" class="card-img-top h-50" alt="daktilo" />
-                <div class="card-body">
-                    <h4> Cep Saati
+                <img src="assets/images/arjantin forma.jpg" class="card-img-top h-50" alt="forma" />
+                <div class="card-body" id="urun-id">
+                    <h4> Arjatin Final Maçı Messi Forması
                         <hr>
                     </h4>
-
                     <p class="card-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, ex?
-                        Ipsam maxime beatae minus quas quia amet, dignissimos id alias
-                        cupiditate hic optio vitae, aut a, tempora incidunt commodi porro.
+                       Ürün bilgileri, <br>
+                       Ürün özellikleri, <br>
+                       Satıcı bilgileri, <br>
+                       Fiyat bilgileri, <br>
                     </p>
+                    <button class="btn btn-warning">Satın Al</button>
                 </div>
             </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card h-75">
-                <img src="assets/online müzayede/daktilo.jpg" class="card-img-top h-50" alt="daktilo" />
-                <div class="card-body">
+                <img src="assets/images/pocket-watch-560937_640.jpg" class="card-img-top h-50" alt="cep saati" />
+                <div class="card-body" id="urun-id">
                     <h4> Cep Saati
                         <hr>
                     </h4>
-
                     <p class="card-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, ex?
-                        Ipsam maxime beatae minus quas quia amet, dignissimos id alias
-                        cupiditate hic optio vitae, aut a, tempora incidunt commodi porro.
+                       Ürün bilgileri, <br>
+                       Ürün özellikleri, <br>
+                       Satıcı bilgileri, <br>
+                       Fiyat bilgileri, <br>
                     </p>
+                    <button class="btn btn-warning">Satın Al</button>
                 </div>
             </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card h-75">
-                <img src="assets/online müzayede/daktilo.jpg" class="card-img-top h-50" alt="daktilo" />
-                <div class="card-body">
-                    <h4> Cep Saati
+                <img src="assets/images/arsenal forma.jpg" class="card-img-top h-50" alt="forma" />
+                <div class="card-body" id="urun-id">
+                    <h4>İmzalı  Nelson Forma 
                         <hr>
                     </h4>
-
                     <p class="card-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, ex?
-                        Ipsam maxime beatae minus quas quia amet, dignissimos id alias
-                        cupiditate hic optio vitae, aut a, tempora incidunt commodi porro.
+                       Ürün bilgileri, <br>
+                       Ürün özellikleri, <br>
+                       Satıcı bilgileri, <br>
+                       Fiyat bilgileri, <br>
                     </p>
+                    <button class="btn btn-warning">Satın Al</button>
                 </div>
             </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card h-75">
-                <img src="assets/online müzayede/daktilo.jpg" class="card-img-top h-50" alt="daktilo" />
-                <div class="card-body">
-                    <h4> Cep Saati
+                <img src="assets/images/ayakkabı koleksiyonu.jpg" class="card-img-top h-50" alt="ayakabı" />
+                <div class="card-body" id="urun-id">
+                    <h4> X Marka Ayakkabı Koleksiyonu
                         <hr>
                     </h4>
-
                     <p class="card-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, ex?
-                        Ipsam maxime beatae minus quas quia amet, dignissimos id alias
-                        cupiditate hic optio vitae, aut a, tempora incidunt commodi porro.
+                       Ürün bilgileri, <br>
+                       Ürün özellikleri, <br>
+                       Satıcı bilgileri, <br>
+                       Fiyat bilgileri, <br>
                     </p>
+                    <button class="btn btn-warning">Satın Al</button>
                 </div>
             </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card h-75">
-                <img src="assets/online müzayede/daktilo.jpg" class="card-img-top h-50" alt="daktilo" />
-                <div class="card-body">
-                    <h4> Cep Saati
+                <img src="assets/images/baseball-1425124_640.jpg" class="card-img-top h-50" alt="baseball" />
+                <div class="card-body" id="urun-id">
+                    <h4> Baseball Topu
                         <hr>
                     </h4>
-
                     <p class="card-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, ex?
-                        Ipsam maxime beatae minus quas quia amet, dignissimos id alias
-                        cupiditate hic optio vitae, aut a, tempora incidunt commodi porro.
+                       Ürün bilgileri, <br>
+                       Ürün özellikleri, <br>
+                       Satıcı bilgileri, <br>
+                       Fiyat bilgileri, <br>
                     </p>
+                    <button class="btn btn-warning">Satın Al</button>
                 </div>
             </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card h-75">
-                <img src="assets/online müzayede/daktilo.jpg" class="card-img-top h-50" alt="daktilo" />
-                <div class="card-body">
-                    <h4> Cep Saati
+                <img src="assets/images/dikiş makinesi.jpg" class="card-img-top h-50" alt="dikiş makinesi" />
+                <div class="card-body" id="urun-id">
+                    <h4> Antika Dikiş Makinası
                         <hr>
                     </h4>
-
                     <p class="card-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, ex?
-                        Ipsam maxime beatae minus quas quia amet, dignissimos id alias
-                        cupiditate hic optio vitae, aut a, tempora incidunt commodi porro.
+                       Ürün bilgileri, <br>
+                       Ürün özellikleri, <br>
+                       Satıcı bilgileri, <br>
+                       Fiyat bilgileri, <br>
                     </p>
+                    <button class="btn btn-warning">Satın Al</button>
                 </div>
             </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card h-75">
-                <img src="assets/online müzayede/daktilo.jpg" class="card-img-top h-50" alt="daktilo" />
-                <div class="card-body">
-                    <h4> Cep Saati
+                <img src="assets/images/doğal taş koleksiyonu.jpg" class="card-img-top h-50" alt="taş koleksiyonu" />
+                <div class="card-body" id="urun-id">
+                    <h4>Doğal Taş Koleksiyonu
                         <hr>
                     </h4>
-
                     <p class="card-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, ex?
-                        Ipsam maxime beatae minus quas quia amet, dignissimos id alias
-                        cupiditate hic optio vitae, aut a, tempora incidunt commodi porro.
+                       Ürün bilgileri, <br>
+                       Ürün özellikleri, <br>
+                       Satıcı bilgileri, <br>
+                       Fiyat bilgileri, <br>
                     </p>
+                    <button class="btn btn-warning">Satın Al</button>
                 </div>
             </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card h-75">
-                <img src="assets/online müzayede/daktilo.jpg" class="card-img-top h-50" alt="daktilo" />
-                <div class="card-body">
-                    <h4> Cep Saati
+                <img src="assets/images/fincan.jpg" class="card-img-top h-50" alt="fincan" />
+                <div class="card-body" id="urun-id">
+                    <h4> Antika Çin Üretimi Fincan
                         <hr>
                     </h4>
-
                     <p class="card-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, ex?
-                        Ipsam maxime beatae minus quas quia amet, dignissimos id alias
-                        cupiditate hic optio vitae, aut a, tempora incidunt commodi porro.
+                       Ürün bilgileri, <br>
+                       Ürün özellikleri, <br>
+                       Satıcı bilgileri, <br>
+                       Fiyat bilgileri, <br>
                     </p>
+                    <button class="btn btn-warning">Satın Al</button>
                 </div>
             </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card h-75">
-                <img src="assets/online müzayede/daktilo.jpg" class="card-img-top h-50" alt="daktilo" />
-                <div class="card-body">
-                    <h4> Cep Saati
+                <img src="assets/images/football-2724393_640.png" class="card-img-top h-50" alt="amerikan futbol topu" />
+                <div class="card-body" id="urun-id">
+                    <h4> Amerikan Futbol Topu
                         <hr>
                     </h4>
-
                     <p class="card-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, ex?
-                        Ipsam maxime beatae minus quas quia amet, dignissimos id alias
-                        cupiditate hic optio vitae, aut a, tempora incidunt commodi porro.
+                       Ürün bilgileri, <br>
+                       Ürün özellikleri, <br>
+                       Satıcı bilgileri, <br>
+                       Fiyat bilgileri, <br>
                     </p>
+                    <button class="btn btn-warning">Satın Al</button>
                 </div>
             </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card h-75">
-                <img src="assets/online müzayede/daktilo.jpg" class="card-img-top h-50" alt="daktilo" />
-                <div class="card-body">
-                    <h4> Cep Saati
+                <img src="assets/images/fotoğraf makinesi.jpg" class="card-img-top h-50" alt="fotoğraf makinesi" />
+                <div class="card-body" id="urun-id">
+                    <h4> X Markanın İlk Fotoğraf Makinesi
                         <hr>
                     </h4>
-
                     <p class="card-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, ex?
-                        Ipsam maxime beatae minus quas quia amet, dignissimos id alias
-                        cupiditate hic optio vitae, aut a, tempora incidunt commodi porro.
+                       Ürün bilgileri, <br>
+                       Ürün özellikleri, <br>
+                       Satıcı bilgileri, <br>
+                       Fiyat bilgileri, <br>
                     </p>
+                    <button class="btn btn-warning">Satın Al</button>
                 </div>
             </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card h-75">
-                <img src="assets/online müzayede/daktilo.jpg" class="card-img-top h-50" alt="daktilo" />
-                <div class="card-body">
-                    <h4> Cep Saati
+                <img src="assets/images/greg-boll-8ekQzUw7cT8-unsplash.jpg" class="card-img-top h-50" alt="bisiklet" />
+                <div class="card-body" id="urun-id">
+                    <h4> Özel Tasarım Bisiklet
                         <hr>
                     </h4>
-
                     <p class="card-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, ex?
-                        Ipsam maxime beatae minus quas quia amet, dignissimos id alias
-                        cupiditate hic optio vitae, aut a, tempora incidunt commodi porro.
+                       Ürün bilgileri, <br>
+                       Ürün özellikleri, <br>
+                       Satıcı bilgileri, <br>
+                       Fiyat bilgileri, <br>
                     </p>
+                    <button class="btn btn-warning">Satın Al</button>
                 </div>
             </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card h-75">
-                <img src="assets/online müzayede/daktilo.jpg" class="card-img-top h-50" alt="daktilo" />
-                <div class="card-body">
-                    <h4> Cep Saati
+                <img src="assets/images/kaset kolleksiyonu.jpg" class="card-img-top h-50" alt="kaset" />
+                <div class="card-body" id="urun-id">
+                    <h4> 1970 -1980 Kaset Kolleksiyonu
                         <hr>
                     </h4>
-
                     <p class="card-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, ex?
-                        Ipsam maxime beatae minus quas quia amet, dignissimos id alias
-                        cupiditate hic optio vitae, aut a, tempora incidunt commodi porro.
+                       Ürün bilgileri, <br>
+                       Ürün özellikleri, <br>
+                       Satıcı bilgileri, <br>
+                       Fiyat bilgileri, <br>
                     </p>
+                    <button class="btn btn-warning">Satın Al</button>
                 </div>
             </div>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card h-75">
-                <img src="assets/online müzayede/daktilo.jpg" class="card-img-top h-50" alt="daktilo" />
-                <div class="card-body">
-                    <h4> Cep Saati
+                <img src="assets/images/minicar collection.jpg" class="card-img-top h-50" alt="oyuncak araba" />
+                <div class="card-body" id="urun-id">
+                    <h4> Oyuncak Araba Koleksiyonu
                         <hr>
                     </h4>
-
                     <p class="card-text">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, ex?
-                        Ipsam maxime beatae minus quas quia amet, dignissimos id alias
-                        cupiditate hic optio vitae, aut a, tempora incidunt commodi porro.
+                       Ürün bilgileri, <br>
+                       Ürün özellikleri, <br>
+                       Satıcı bilgileri, <br>
+                       Fiyat bilgileri, <br>
                     </p>
+                    <button class="btn btn-warning">Satın Al</button>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-3">
+            <div class="card h-75">
+                <img src="assets/images/patch koleksiyonu.jpg" class="card-img-top h-50" alt="patch" />
+                <div class="card-body" id="urun-id">
+                    <h4> Patch Kolleksiyonu
+                        <hr>
+                    </h4>
+                    <p class="card-text">
+                       Ürün bilgileri, <br>
+                       Ürün özellikleri, <br>
+                       Satıcı bilgileri, <br>
+                       Fiyat bilgileri, <br>
+                    </p>
+                    <button class="btn btn-warning">Satın Al</button>
                 </div>
             </div>
         </div>
