--- a/sergiAlanı.html
+++ b/sergiAlanı.html
@@ -206,6 +206,46 @@
 
         </div>
     </div>
+    <!-- keşfet alanı -->
+    <div class="container">
+        <div class="row">
+            <div id="sergi-parag">
+                <div class="card-body">
+                    <img src="assets/images/dikiş makinesi.jpg" alt="dikiş makinesi">
+                    <h5 class="card-title" style="margin-bottom: 2rem;"><b><i>@kullanici1</i></b></h5>
+                    <p class="card-text">@kullanici1 kolleksiyonuna #urun1 ekledi.</p>
+                    <a href="#" style="margin-top: 1rem;" class="btn btn-primary btn-sm" data-mdb-ripple-init>Profile git</a>
+                </div>
+            </div>
+            <div id="sergi-parag">
+                <div class="card-body">
+                    <img src="assets/images/ayakkabı koleksiyonu.jpg" alt="ayakabı koleksiyonu">
+                    <h5 class="card-title" style="margin-bottom: 2rem;"><b><i>@kullanici2</i></b></h5>
+                    <p class="card-text">@kullanici2 kolleksiyonunu sergileme moduna aldı.</p>
+                    <a href="#" style="margin-top: 1rem;" class="btn btn-primary btn-sm" data-mdb-ripple-init>Profile git</a>
+                </div>
+            </div>
+            <div id="sergi-parag">
+                <div class="card-body">
+                    <img src="assets/images/pocket-watch-560937_640.jpg" alt="cep saati">
+                    <h5 class="card-title" style="margin-bottom: 2rem;"><b><i>@kullanici3</i></b></h5>
+                    <p class="card-text">@kullanici3 kolleksiyonuna #urun2 ekleyerek #kategori1'de 6. sıraya yükseldi.</p>
+                    <a href="#" style="margin-top: 1rem;" class="btn btn-primary btn-sm" data-mdb-ripple-init>Profile git</a>
+                </div>
+            </div>
+            <div id="sergi-parag">
+                <div class="card-body">
+                    <img src="assets/images/doğal taş koleksiyonu.jpg" alt="taş koleksiyonu">
+                    <h5 class="card-title" style="margin-bottom: 2rem;"><b><i>@kullanici1</i></b></h5>
+                    <p class="card-text">@kullanici4 #urun7'yi alarak ilk parçasını aldı ve kolleksiyonuna ekledi.</p>
+                    <a href="#" style="margin-top: 1rem;" class="btn btn-primary btn-sm" data-mdb-ripple-init>Profile git</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
     <!-- MDB -->
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.umd.min.js"></script>
