--- a/anasayfa.html
+++ b/anasayfa.html
@@ -42,7 +42,7 @@
     </ul>
 
     <!-- slider -->
-    <div class="container my-5" >
+    <div class="container my-5">
         <!-- Carousel wrapper -->
         <div id="carouselBasicExample" class="carousel slide carousel-fade" data-mdb-ride="carousel"
             data-mdb-carousel-init>
@@ -60,8 +60,7 @@
             <div class="carousel-inner">
                 <!-- Single item -->
                 <div class="carousel-item active">
-                    <img src="assets/home img/1.jpg" class="d-block w-100"
-                        alt="Sunset Over the City" />
+                    <img src="assets/home img/1.jpg" class="d-block w-100" alt="Sunset Over the City" />
                     <div class="carousel-caption d-none d-md-block" style="background-color: black;">
                         <h5> <b>Afiş 1</b></h5>
                         <p>AntikApp - Antikadan daha fazlası.</p>
@@ -70,8 +69,7 @@
 
                 <!-- Single item -->
                 <div class="carousel-item">
-                    <img src="assets/home img/2.jpg" class="d-block w-100"
-                        alt="Canyon at Nigh" />
+                    <img src="assets/home img/2.jpg" class="d-block w-100" alt="Canyon at Nigh" />
                     <div class="carousel-caption d-none d-md-block" style="background-color: black;">
                         <h5><b>Afiş 1</b></h5>
                         <p>AntikApp - Kolleksiyondan daha fazlası</p>
@@ -80,8 +78,7 @@
 
                 <!-- Single item -->
                 <div class="carousel-item">
-                    <img src="assets/home img/3.jpg" class="d-block w-100"
-                        alt="Cliff Above a Stormy Sea" />
+                    <img src="assets/home img/3.jpg" class="d-block w-100" alt="Cliff Above a Stormy Sea" />
                     <div class="carousel-caption d-none d-md-block" style="background-color: black;">
                         <h5><b>Afiş 1</b></h5>
                         <p>AntikApp - Yeni eski herşey</p>
@@ -126,12 +123,12 @@
                                 </tr>
                                 <tr>
                                     <td>
-                                        <input id="uemail" name="uemail" type="email" placeholder="E-mailiniz"
+                                        <input id="uemail1" name="uemail" type="email" placeholder="E-mailiniz"
                                             title="E-mail" required autofocus="true">
                                     </td>
                                 </tr>
                                 <tr>
-                                    <td><input id="upassword" name="upassword" type="password" placeholder="Şifreniz"
+                                    <td><input id="upassword1" name="upassword" type="password" placeholder="Şifreniz"
                                             title="Şifreniz" required autofocus="true"></td>
                                 </tr>
                                 <tr>
@@ -216,8 +213,8 @@
 
     <!-- Ürün Kartları kısmı -->
 
-    <div class="row mx-3 my-2 mt-0" style="text-align: center; background-color: #dbdee2;">
-    <h2 style="text-align: center;  margin-bottom: 5rem; margin-top: 5rem;">Ürünler</h2>
+    <div class="row mx-3 my-2 mt-0 product-list" style="text-align: center; background-color: #dbdee2;">
+        <h2 style="text-align: center;  margin-bottom: 5rem; margin-top: 5rem;">Ürünler</h2>
         <div class="col-sm-12 col-md-4 col-lg-3">
             <div class="card h-75">
                 <img src="assets/images/arjantin forma.jpg" class="card-img-top h-50" alt="forma" />
@@ -226,10 +223,10 @@
                         <hr>
                     </h4>
                     <p class="card-text">
-                       Ürün bilgileri, <br>
-                       Ürün özellikleri, <br>
-                       Satıcı bilgileri, <br>
-                       Fiyat bilgileri, <br>
+                        Ürün bilgileri, <br>
+                        Ürün özellikleri, <br>
+                        Satıcı bilgileri, <br>
+                        Fiyat bilgileri, <br>
                     </p>
                     <button class="btn btn-warning">Satın Al</button>
                 </div>
@@ -243,10 +240,10 @@
                         <hr>
                     </h4>
                     <p class="card-text">
-                       Ürün bilgileri, <br>
-                       Ürün özellikleri, <br>
-                       Satıcı bilgileri, <br>
-                       Fiyat bilgileri, <br>
+                        Ürün bilgileri, <br>
+                        Ürün özellikleri, <br>
+                        Satıcı bilgileri, <br>
+                        Fiyat bilgileri, <br>
                     </p>
                     <button class="btn btn-warning">Satın Al</button>
                 </div>
@@ -256,14 +253,14 @@
             <div class="card h-75">
                 <img src="assets/images/arsenal forma.jpg" class="card-img-top h-50" alt="forma" />
                 <div class="card-body" id="urun-id">
-                    <h4>İmzalı  Nelson Forma 
+                    <h4>İmzalı Nelson Forma
                         <hr>
                     </h4>
                     <p class="card-text">
-                       Ürün bilgileri, <br>
-                       Ürün özellikleri, <br>
-                       Satıcı bilgileri, <br>
-                       Fiyat bilgileri, <br>
+                        Ürün bilgileri, <br>
+                        Ürün özellikleri, <br>
+                        Satıcı bilgileri, <br>
+                        Fiyat bilgileri, <br>
                     </p>
                     <button class="btn btn-warning">Satın Al</button>
                 </div>
@@ -277,10 +274,10 @@
                         <hr>
                     </h4>
                     <p class="card-text">
-                       Ürün bilgileri, <br>
-                       Ürün özellikleri, <br>
-                       Satıcı bilgileri, <br>
-                       Fiyat bilgileri, <br>
+                        Ürün bilgileri, <br>
+                        Ürün özellikleri, <br>
+                        Satıcı bilgileri, <br>
+                        Fiyat bilgileri, <br>
                     </p>
                     <button class="btn btn-warning">Satın Al</button>
                 </div>
@@ -294,10 +291,10 @@
                         <hr>
                     </h4>
                     <p class="card-text">
-                       Ürün bilgileri, <br>
-                       Ürün özellikleri, <br>
-                       Satıcı bilgileri, <br>
-                       Fiyat bilgileri, <br>
+                        Ürün bilgileri, <br>
+                        Ürün özellikleri, <br>
+                        Satıcı bilgileri, <br>
+                        Fiyat bilgileri, <br>
                     </p>
                     <button class="btn btn-warning">Satın Al</button>
                 </div>
@@ -311,10 +308,10 @@
                         <hr>
                     </h4>
                     <p class="card-text">
-                       Ürün bilgileri, <br>
-                       Ürün özellikleri, <br>
-                       Satıcı bilgileri, <br>
-                       Fiyat bilgileri, <br>
+                        Ürün bilgileri, <br>
+                        Ürün özellikleri, <br>
+                        Satıcı bilgileri, <br>
+                        Fiyat bilgileri, <br>
                     </p>
                     <button class="btn btn-warning">Satın Al</button>
                 </div>
@@ -328,10 +325,10 @@
                         <hr>
                     </h4>
                     <p class="card-text">
-                       Ürün bilgileri, <br>
-                       Ürün özellikleri, <br>
-                       Satıcı bilgileri, <br>
-                       Fiyat bilgileri, <br>
+                        Ürün bilgileri, <br>
+                        Ürün özellikleri, <br>
+                        Satıcı bilgileri, <br>
+                        Fiyat bilgileri, <br>
                     </p>
                     <button class="btn btn-warning">Satın Al</button>
                 </div>
@@ -345,10 +342,10 @@
                         <hr>
                     </h4>
                     <p class="card-text">
-                       Ürün bilgileri, <br>
-                       Ürün özellikleri, <br>
-                       Satıcı bilgileri, <br>
-                       Fiyat bilgileri, <br>
+                        Ürün bilgileri, <br>
+                        Ürün özellikleri, <br>
+                        Satıcı bilgileri, <br>
+                        Fiyat bilgileri, <br>
                     </p>
                     <button class="btn btn-warning">Satın Al</button>
                 </div>
@@ -356,16 +353,17 @@
         </div>
         <div class="col-sm-12 col-md-6 col-lg-3">
             <div class="card h-75">
-                <img src="assets/images/football-2724393_640.png" class="card-img-top h-50" alt="amerikan futbol topu" />
+                <img src="assets/images/football-2724393_640.png" class="card-img-top h-50"
+                    alt="amerikan futbol topu" />
                 <div class="card-body" id="urun-id">
                     <h4> Amerikan Futbol Topu
                         <hr>
                     </h4>
                     <p class="card-text">
-                       Ürün bilgileri, <br>
-                       Ürün özellikleri, <br>
-                       Satıcı bilgileri, <br>
-                       Fiyat bilgileri, <br>
+                        Ürün bilgileri, <br>
+                        Ürün özellikleri, <br>
+                        Satıcı bilgileri, <br>
+                        Fiyat bilgileri, <br>
                     </p>
                     <button class="btn btn-warning">Satın Al</button>
                 </div>
@@ -379,10 +377,10 @@
                         <hr>
                     </h4>
                     <p class="card-text">
-                       Ürün bilgileri, <br>
-                       Ürün özellikleri, <br>
-                       Satıcı bilgileri, <br>
-                       Fiyat bilgileri, <br>
+                        Ürün bilgileri, <br>
+                        Ürün özellikleri, <br>
+                        Satıcı bilgileri, <br>
+                        Fiyat bilgileri, <br>
                     </p>
                     <button class="btn btn-warning">Satın Al</button>
                 </div>
@@ -396,10 +394,10 @@
                         <hr>
                     </h4>
                     <p class="card-text">
-                       Ürün bilgileri, <br>
-                       Ürün özellikleri, <br>
-                       Satıcı bilgileri, <br>
-                       Fiyat bilgileri, <br>
+                        Ürün bilgileri, <br>
+                        Ürün özellikleri, <br>
+                        Satıcı bilgileri, <br>
+                        Fiyat bilgileri, <br>
                     </p>
                     <button class="btn btn-warning">Satın Al</button>
                 </div>
@@ -413,10 +411,10 @@
                         <hr>
                     </h4>
                     <p class="card-text">
-                       Ürün bilgileri, <br>
-                       Ürün özellikleri, <br>
-                       Satıcı bilgileri, <br>
-                       Fiyat bilgileri, <br>
+                        Ürün bilgileri, <br>
+                        Ürün özellikleri, <br>
+                        Satıcı bilgileri, <br>
+                        Fiyat bilgileri, <br>
                     </p>
                     <button class="btn btn-warning">Satın Al</button>
                 </div>
@@ -430,10 +428,10 @@
                         <hr>
                     </h4>
                     <p class="card-text">
-                       Ürün bilgileri, <br>
-                       Ürün özellikleri, <br>
-                       Satıcı bilgileri, <br>
-                       Fiyat bilgileri, <br>
+                        Ürün bilgileri, <br>
+                        Ürün özellikleri, <br>
+                        Satıcı bilgileri, <br>
+                        Fiyat bilgileri, <br>
                     </p>
                     <button class="btn btn-warning">Satın Al</button>
                 </div>
@@ -447,10 +445,10 @@
                         <hr>
                     </h4>
                     <p class="card-text">
-                       Ürün bilgileri, <br>
-                       Ürün özellikleri, <br>
-                       Satıcı bilgileri, <br>
-                       Fiyat bilgileri, <br>
+                        Ürün bilgileri, <br>
+                        Ürün özellikleri, <br>
+                        Satıcı bilgileri, <br>
+                        Fiyat bilgileri, <br>
                     </p>
                     <button class="btn btn-warning">Satın Al</button>
                 </div>
@@ -469,52 +467,26 @@
         </div>
         <div class="offcanvas-body">
             <div class="table-responsive-sm">
-                <table class="table table-light table-striped">
-                    <thead>
-                        <tr>
-                            <th scope="col"></th>
-                            <th scope="col">Ürün Adı</th>
-                            <th scope="col">Fiyat</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr class="">
-                            <td scope="row">1</td>
-                            <td>Cep Saati</td>
-                            <td>$</td>
-                        </tr>
-                        <tr class="">
-                            <td scope="row">2</td>
-                            <td>Patch Koleksiyonu</td>
-                            <td>$</td>
-                        </tr>
-                        <tr class="">
-                            <td scope="row">3</td>
-                            <td>Dünya Kupası Pull Koleksiyonu</td>
-                            <td>$</td>
-                        </tr>
-                        <tr class="">
-                            <td scope="row">4</td>
-                            <td>Antika Dikiş Makinası</td>
-                            <td>$</td>
-                        </tr>
-                        <tr></tr>
-                    </tbody>
-                    <tfoot>
-                        <tr class="">
-                            <td>#</td>
-                            <td>Toplam Tutar</td>
-                            <td style="background-color: #FFCA2C">$</td>
-                        </tr>
-                        <tr class="">
-                            <button type="reset" class="btn btn-outline-warning">
-                                Sepeti Temizle
-                            </button>
-                            <button type="button" class="btn btn-outline-warning">Onayla</button>
-                        </tr>
-
-                    </tfoot>
-                </table>
+                <ul class="basket_list">
+                    <li>
+                        <img src="assets/images/dikiş makinesi.jpg" width="100" height="100">
+                        <div>
+                            <h3>dikiş makinesi</h3>
+                            <span>250$</span><br>
+                            <span>Ürünü sil</span>
+                        </div>
+                        <div class="product_count mx-4">
+                            <span class="decrease">-</span>
+                            <span>2</span>
+                            <span class="increase">+</span>
+                        </div>
+                    </li>
+                    
+                </ul>
+                <div class="basket_total">
+                    <span class="fw-bold mb-3 fs-4">Toplam : 450$</span>
+                    <button class="btn btn-outline-danger fs-6">Satın Al</button>
+                </div>
             </div>
 
         </div>
