sepet kısmında ürünün stoğu varsa ekleme, ürünü azaltma,  ürünü tamamen çıkartma vb. özellikleri eklendi.

--- a/anasayfa.html
+++ b/anasayfa.html
@@ -468,23 +468,10 @@
         <div class="offcanvas-body">
             <div class="table-responsive-sm">
                 <ul class="basket_list">
-                    <li>
-                        <img src="assets/images/dikiş makinesi.jpg" width="100" height="100">
-                        <div>
-                            <h3>dikiş makinesi</h3>
-                            <span>250$</span><br>
-                            <span>Ürünü sil</span>
-                        </div>
-                        <div class="product_count mx-4">
-                            <span class="decrease">-</span>
-                            <span>2</span>
-                            <span class="increase">+</span>
-                        </div>
-                    </li>
-                    
+                    <p>Herhangi bir ürün eklemediniz.</p>                    
                 </ul>
                 <div class="basket_total">
-                    <span class="fw-bold mb-3 fs-4">Toplam : 450$</span>
+                    <span class="total_price fw-bold mb-3 fs-4"></span>
                     <button class="btn btn-outline-danger fs-6">Satın Al</button>
                 </div>
             </div>
