create auctions products json file

--- a/mezat.html
+++ b/mezat.html
@@ -245,7 +245,8 @@
                         alt="film poster kitap" />
                     <div class="card-body">
                         <h3 class="card-title h-50"><b>Film Posterleri Kitabı</b></h3>
-                        <p class="card-text"> 1900-1999 arası Hollywood'a yayınlanan filmlerin afiş ve posterlerinin toplandığı kitaptır.</p>
+                        <p class="card-text"> 1900-1999 arası Hollywood'a yayınlanan filmlerin afiş ve posterlerinin
+                            toplandığı kitaptır.</p>
                     </div>
                     <ul class="list-group list-group-light list-group-small">
                         <li class="list-group-item px-4"><b>Satıcı İsmi : </b> B kişisi</li>
@@ -265,7 +266,8 @@
                         alt="madeni para koleksiyonu" />
                     <div class="card-body">
                         <h3 class="card-title h-50"><b>Bizans Dönemi Madeni Para</b></h3>
-                        <p class="card-text"> 1250-1350'li yıllar arasında üretildiği düşünülen Doğu Roma madeni para kolleksiyonudur. Exspertiz Raporu mevcuttur.</p>
+                        <p class="card-text"> 1250-1350'li yıllar arasında üretildiği düşünülen Doğu Roma madeni para
+                            kolleksiyonudur. Exspertiz Raporu mevcuttur.</p>
                     </div>
                     <ul class="list-group list-group-light list-group-small">
                         <li class="list-group-item px-4"><b>Satıcı İsmi : </b> Malatya X Müzesi</li>
@@ -285,7 +287,8 @@
                         alt="old old_money_koleksiyon" />
                     <div class="card-body">
                         <h3 class="card-title h-50"><b>Güncel 25 Ülkelesinin Para Kolleksiyonu </b></h3>
-                        <p class="card-text">25 ülkeye ait güncel olarak tedavülde bulunan 84 adet kağıt baknotlarıdır. Güncel kurlarla sadece paraların değeri 3500 liradır.</p>
+                        <p class="card-text">25 ülkeye ait güncel olarak tedavülde bulunan 84 adet kağıt baknotlarıdır.
+                            Güncel kurlarla sadece paraların değeri 3500 liradır.</p>
                     </div>
                     <ul class="list-group list-group-light list-group-small">
                         <li class="list-group-item px-4"><b>Satıcı İsmi : </b> Z kişisi</li>
@@ -305,7 +308,8 @@
                         alt="pronto_600 kamera" />
                     <div class="card-body">
                         <h3 class="card-title h-50"><b>Polarcid Marka Pronto600 Kamera</b></h3>
-                        <p class="card-text"> 2000'li yılların başında üretilmiş ilk renkli fotoğraf çeken makinalardan biridir.</p>
+                        <p class="card-text"> 2000'li yılların başında üretilmiş ilk renkli fotoğraf çeken makinalardan
+                            biridir.</p>
                     </div>
                     <ul class="list-group list-group-light list-group-small">
                         <li class="list-group-item px-4"><b>Satıcı İsmi : </b>X Kamera Dükkanı</li>
@@ -325,7 +329,8 @@
                         alt="koleksiyon kitabı" />
                     <div class="card-body">
                         <h3 class="card-title h-50"><b>Sculpture İlk Basım</b></h3>
-                        <p class="card-text">Dünyaca ünlü romanın ilk bakısıdır. Koleksiyon değeri gün geçtikçe artmaktadır.</p>
+                        <p class="card-text">Dünyaca ünlü romanın ilk bakısıdır. Koleksiyon değeri gün geçtikçe
+                            artmaktadır.</p>
                     </div>
                     <ul class="list-group list-group-light list-group-small">
                         <li class="list-group-item px-4"><b>Satıcı İsmi : </b>X Kitapevi</li>
@@ -404,7 +409,7 @@
     <!-- MDB -->
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.umd.min.js"></script>
-
+    <script src="app_auction.js"></script>
 
 </body>
 
