--- a/anasayfa.html
+++ b/anasayfa.html
@@ -479,7 +479,7 @@
         <!-- Copyright -->
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
             © 2023 Copyright:
-            <a class="text-body" href="https://mdbootstrap.com/">AntikApp</a>
+            <a class="text-body" href="#">AntikApp</a>
         </div>
         <!-- Copyright -->
     </footer>
