--- a/mezat.html
+++ b/mezat.html
@@ -198,7 +198,7 @@
 
     <!-- online mezat kısmı -->
     <h3 style="text-align: center;" class="mt-4">Online Müzayede</h3>
-    <div class="container mt-4">
+    <div class="container mt-4 product-auction-list">
         <div class="row row-cols-1 row-cols-md-3 g-4" style="text-align: justify;">
             <div class="col">
                 <div class="card h-100">
