update and revize

--- a/anasayfa.html
+++ b/anasayfa.html
@@ -467,7 +467,7 @@
                 </ul>
                 <div class="basket_total">
                     <span class="total_price fw-bold mb-3 fs-4"></span>
-                    <button class="btn btn-outline-danger fs-6">Satın Al</button>
+                    <button class="btn btn-outline-danger fs-6 " onClick="purchaseItems()">Satın Al</button>
                 </div>
             </div>
 
